Initial Panel Login Design

--- a/endpoints/panel/pages/login.html
+++ b/endpoints/panel/pages/login.html
@@ -9,9 +9,15 @@
 
     <div class="login">
         <div class="box">
-            Login please!
-            <input type="text">
-            <input type="password">
+            <div class="title">
+                <span>Login</span>
+            </div>
+
+            <div class="inputs">
+                <input type="text" placeholder="Username">
+                <input type="password" placeholder="Password">
+                <input type="submit">
+            </div>
         </div>
     </div>
 
