--- a/endpoints/panel/pages/main.html
+++ b/endpoints/panel/pages/main.html
@@ -24,7 +24,7 @@
                 <li>Server</li>
                 <ul>
                     <li>Stats</li>
-                    <li>Logs</li>
+                    <li class="active">Logs</li>
                     <li>System</li>
                 </ul>
             </ul>
